# tg-vk-music-bot

./: .gitignore  Procfile  README.md  async_extend.py  audio.py  bot.crt  bot.key  botbase.db  botbase.db-journal  botdata.ini  main.py  pyproject.toml  requirements.txt  tg_lib.py  ui_constants.py  vk_config.v2.json  планировщик
.gitignore/: botbase.db
aitertools/: __init__.py
alembic/: env.py
alembic/versions/: 2023_07_08-88f0b269a679_add_chat_table.py  2023_07_08-d3ffa57408c4_create_db.py  2023_07_08-fb60040122c6_add_unique_constrain.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
root/: __init__.py  commander.py  constants.py  loads_demon.py  log_lib.py  main.py  models.py  pager.py  telegram.py  tg_lib.py  tracks_cache.py  ui_constants.py
root/bots/: base.py  telegram.py
root/components/: base.py  soundcloud.py  telegram.py  vk.py
root/db_models/: __init__.py  cached_tracks.py  chats.py
root/sections/: base.py  soundcloud.py  vk.py  yandex_music.py  youtube.py
root/utils/: __init__.py  m3u8_to_mp3.py  middleware.py  temporary_block.py
scripts/: init_db.py  run_bot.py
soundcloud_lib/: __init__.py  soundcloud_api.py
src/soundcloud_lib/: schemas.py
src/tg_vk_music_bot/: __init__.py  async_extend.py  commander.py  constants.py  loads_demon.py  main.py  models.py  pager.py  telegram.py  tracks_cache.py  ui_constants.py
src/tg_vk_music_bot/audio/: __init__.py  audio.py
src/tg_vk_music_bot/bots/: base.py  telegram.py
src/tg_vk_music_bot/sections/: base.py  soundcloud.py  vk.py  yandex_music.py  youtube.py
(+4 files in other folders)
